fixed loading collapse

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ img {
   -webkit-user-drag: none;
 }
 
+a {
+  -webkit-user-drag: none;
+}
+
 .glass {
   background: rgba(80, 80, 80, 0.1);
   backdrop-filter: blur(10px);
